--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "actumn.github.io"
+baseURL = "https://actumn.github.io"
 languageCode = "en-us"
 defaultContentLanguage = "ko-kr"
 title = "Actumn (SunMyeong Lee)"
